# seq_align

./: .gitignore  CMakeLists.txt  README.md  aaaa.cuh  main.cpp  nw.cpp  profile.ncu-rep  text.Tx  text.Txt  text.txt
include/: hello_world.cuh  nw.h  nw1.cuh  nw2.cuh  nw3.cuh  nw4.cuh  nw5.cuh  nw6.cuh
src/: hello_world.cu  nw.cpp  nw1.cu  nw2.cu  nw3.cu  nw4.cu  nw5.cu  nw6.cu
test_files/: s1.txt  s2.txt  test1.txt  test2.txt  test3.txt  test4.txt
